add some hash benchmark