@@ -57,6 +57,8 @@
                             <goal>testCompile</goal>
                         </goals>
                         <configuration>
+                            <release>${java.version}</release>
+                            <enablePreview>true</enablePreview>
                             <useModulePath>true</useModulePath>
                             <annotationProcessorPaths>
                                 <path>
@@ -67,6 +69,13 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
